# workbench

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  WINDOWS_PORT.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
changelog/: RELEASE_v0.1.0.md  RELEASE_v0.10.0.md  RELEASE_v0.10.1.md  RELEASE_v0.11.0.md  RELEASE_v0.12.0.md  RELEASE_v0.13.0.md  RELEASE_v0.14.0.md  RELEASE_v0.14.1.md  RELEASE_v0.15.0.md  RELEASE_v0.16.0.md  RELEASE_v0.17.0.md  RELEASE_v0.18.0.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.4.1.md  RELEASE_v0.5.0.md  RELEASE_v0.5.1.md  RELEASE_v0.6.0.md  RELEASE_v0.6.1.md  RELEASE_v0.7.0.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md
src/: app.css  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/SwiftTermBridge/: Package.swift
src-tauri/SwiftTermBridge/Sources/SwiftTermBridge/: SwiftTermBridge.swift
src-tauri/SwiftTermBridge/Sources/SwiftTermBridge/include/: SwiftTermBridge.h
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_sessions.rs  code_server.rs  code_server_commands.rs  codex.rs  codex_config.rs  codex_sessions.rs  commands.rs  config.rs  git.rs  git_commands.rs  git_watcher.rs  github.rs  github_poller.rs  hook_bridge.rs  lib.rs  main.rs  menu.rs  native_terminal.rs  native_terminal_commands.rs  paths.rs  pty.rs  refresh_dispatcher.rs  session_utils.rs  settings.rs  shell_integration.rs  trello_automation.rs  trello_commands.rs  types.rs
src-tauri/src/trello/: api.rs  config.rs  types.rs
(+122 files in other folders)
