[package]
name = "workbench"
version = "0.1.0"
description = "Workbench terminal manager"
authors = []
edition = "2021"

[lib]
name = "workbench_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
notify = "7"
notify-debouncer-mini = "0.5"
